--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0"
   },
